# cashcode

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: bill_table.rs  command.rs  device.rs  error.rs  frame.rs  lib.rs  main.rs  status.rs
src/cashcode/: commands.rs  init.rs  mod.rs  sequence.rs
src/constants/: bills.rs  conts.rs  mod.rs
src/tools/: hex_converter.rs  mod.rs
